Minor updates ^^